update vimrc & set diftool

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,9 @@
   untracked = ls-files --other --exclude-standard
   ignored = ls-files --ignored --exclude-standard --others
 
+[diff]
+  tool = nvim -d
+
 [color]
   ui = auto
 
