enable true color on tmux >= 2.2 & update dracula theme repo address

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,10 +24,11 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+#setw -g mode-mouse off
+#set -g mouse-select-pane off
+#set -g mouse-resize-pane off
+#set -g mouse-select-window off
+set -g mouse off
 
 set -g default-terminal "screen-256color"
 
@@ -51,7 +52,7 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-left-length 100
 #set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
 set-option -g status-left  '#[fg=cyan][#S#[fg=black,bold]#P#[default]#[fg=cyan]]#[default]'
@@ -62,3 +63,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 set-window-option -g xterm-keys on
+
+# support for true color
+# works only on tmux >= 2.2
+set-option -ga terminal-overrides ",xterm-256color:Tc"
