update vimrc & tmuxconf
add:
- vim tmux navigator (ctrl hjkl)
- tpope's commentary

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,67 @@
-set -g prefix C-a
 unbind C-b
-
-set -sg escape-time 1
-
-set -g base-index 1
-setw -g pane-base-index 1
-
-# reload this
-bind r source-file ~/.tmux.conf \; display "Reloaded"
-
+set -g prefix C-a
 bind C-a send-prefix
 
-bind | split-window -h
-bind - split-window -v
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
+set -g escape-time 0
+
+# windows and panes start at 1
+set -g base-index 1
+set -g pane-base-index 1
+
+# renumber when a window is closed
+set -g renumber-windows on
+
+set -g xterm-keys on
+
+set -g mouse off
+#set -g mouse-select-pane on
+
+set -gw mode-keys vi
+
+set -gw aggressive-resize on
+
+# reload this
+unbind r
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
+
+# ---------------------------------------------------------
+# status
+# ---------------------------------------------------------
+
+# transparent background
+set -g status-bg default
+set -g status-fg default
+
+set -g window-status-format ' #[fg=colour250]#I #W '
+set -g window-status-current-bg red
+set -g window-status-current-format ' #[fg=colour255]#I #W '
+set -g status-right "🌡 #(acpi -t | awk '{ print $4\" ºC\" }') | %a %d %b ⌚ %H:%M"
+
+set -g set-titles off
+
+set -g message-fg colour231
+set -g message-bg '#C792EA'
+set -g message-bg '#bb80b3'
+set -g message-bg '#5f00af'
+set -g message-attr bright
+
+# ---------------------------------------------------------
+# splits
+# ---------------------------------------------------------
+
+# move to the current path
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
+# ---------------------------------------------------------
+# panes
+# ---------------------------------------------------------
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -24,46 +72,12 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-#setw -g mode-mouse off
-#set -g mouse-select-pane off
-#set -g mouse-resize-pane off
-#set -g mouse-select-window off
-set -g mouse off
-
-set -g default-terminal "screen-256color"
-
-set -g status-fg white
-set -g status-bg "#333333"
-
-setw -g window-status-fg "#cccccc"
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-setw -g window-status-current-fg "#eeeeee"
-setw -g window-status-current-bg colour236
-setw -g window-status-current-attr bright
-
-set -g pane-border-fg "#555555"
-set -g pane-border-bg "#222222"
-set -g pane-active-border-fg white
-set -g pane-active-border-bg "#222222"
-
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-#set -g status-utf8 on
-set -g status-left-length 100
-#set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
-set-option -g status-left  '#[fg=cyan][#S#[fg=black,bold]#P#[default]#[fg=cyan]]#[default]'
-set -g status-right "#[fg=#ffffff,bg=#5f00af,bold] %d %b · %R "
-set -g status-justify centre
-
-setw -g monitor-activity on
-set -g visual-activity on
-
-set-window-option -g xterm-keys on
-
-# support for true color
-# works only on tmux >= 2.2
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
